encode the key in another way

--- a/encrypt.html
+++ b/encrypt.html
@@ -1,24 +1,24 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<title>encrypt</title>
-<style>
-.wrapper{
-  font-size: 16px;
-}
-#key,#content,#result{
-  display: block;
-  width: 300px;
-  padding: 2px;
-  border-width: 2px;
-}
-button{
-  line-height: 16px;
-  margin: 5px 43px;
-}
-</style>
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <title>encrypt</title>
+  <style>
+    .wrapper{
+      font-size: 16px;
+    }
+    #key,#content,#result{
+      display: block;
+      width: 300px;
+      padding: 2px;
+      border-width: 2px;
+    }
+    button{
+      line-height: 16px;
+      margin: 5px 43px;
+    }
+  </style>
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -36,7 +36,7 @@ button{
         url: url,
         type: 'POST',
         data: {
-          key: base64Encode(key),
+          key: encode(key),
           content: content
         },
         dataType: 'json',
@@ -46,10 +46,11 @@ button{
       alert('Please input key and content!');
     }
   });
-  function base64Encode(str) {
-    return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g, function(match, p1) {
-      return String.fromCharCode('0x' + p1);
-    }));
+  function encode(str) {
+    var convert = unescape(encodeURIComponent(str));
+    var array = convert.split('');
+    array.map(val => val.charCodeAt(0)).map(val => String.fromCharCode((val^val<<1^val>>1)&255));
+    return btoa(array.join());
   }
   function displayResult(data) {
     if (data.error) {
