change backend url

--- a/encrypt.html
+++ b/encrypt.html
@@ -30,7 +30,7 @@
 </div>
 <script>
   $('.wrapper').on('click', 'button', function() {
-    var url = 'http://172.96.199.149:8888/' + $(this).attr('id'), key = $('#key').val(), content = $('#content').val();
+    var url = 'https://www.andymiao.cn:456/' + $(this).attr('id'), key = $('#key').val(), content = $('#content').val();
     if(key && content) {
       $.ajax({
         url: url,
