--- a/search.html
+++ b/search.html
@@ -174,7 +174,7 @@ body{
     }
   }
   function search (val, page) {
-    var url = 'http://172.96.199.149:8888/search';
+    var url = 'https://www.andymiao.cn:456/search';
     $('#input').trigger('blur');
     if (val !== '') {
       $.ajax({
