--- a/search.html
+++ b/search.html
@@ -19,7 +19,7 @@ body{
   font-size: 16px;
 }
 #button{
-  width: 80px;
+  width: 82px;
   line-height: 16px;
   font-size: 16px;
 }
@@ -212,17 +212,17 @@ body{
     }
   }
   function searchRes (data) {
-    console.log(data.html);
     var dom = $(data.html);
-    var result = dom.find('#res');
-    var style = dom.filter('style');
+    var main = dom.filter('#main');
+    var style = main.children('style');
     var outer = $('#result');
-    result.find('h3.r>a').each(function () {
-      var url = this.href;
-      this.href = url.slice(33, url.indexOf('&'));
+    var length = main.children().length;
+    main.children(`:lt(3),:gt(${length - 4})`).remove();
+    main.find('.jfp3ef>a').each(function () {
+      this.href = this.href.slice(7, this.href.indexOf('&'));
     });
     $('#input').off('input').on('input', list);
-    outer.removeClass('spin').empty().append(style).append(result).append(navigation());
+    outer.removeClass('spin').empty().append(style).append(main).append(navigation());
   }
   function navigation () {
     var nav = $('<div/>', {id: 'navigation'});
