--- a/search.html
+++ b/search.html
@@ -78,10 +78,12 @@ body{
   background-position: center;
 }
 .link{
-  margin: 10px;
-  color: #1a0dab;
+  display: inline-block;
+  margin: 0 40px;
+  padding: 15px;
+  color: #1967D2;
   font-family: fantasy;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
 }
 .link:hover{
