--- a/search.html
+++ b/search.html
@@ -80,7 +80,7 @@
     .link{
       display: inline-block;
       margin: 0 40px;
-      padding: 15px;
+      padding: 15px 15px 25px;
       color: #1967D2;
       font-family: fantasy;
       font-size: 18px;
