change class to match url

--- a/search.html
+++ b/search.html
@@ -220,7 +220,7 @@ body{
     var outer = $('#result');
     var length = main.children().length;
     main.children(`:lt(3),:gt(${length - 4})`).remove();
-    main.find('.jfp3ef>a').each(function () {
+    main.find('.kCrYT>a').each(function () {
       this.href = this.href.slice(33, this.href.indexOf('&'));
     });
     $('#input').off('input').on('input', list);
