--- a/encrypt.html
+++ b/encrypt.html
@@ -18,7 +18,7 @@
       margin: 5px 43px;
     }
   </style>
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 </head>
 <body>
 <div class="wrapper">
