--- a/search.html
+++ b/search.html
@@ -93,7 +93,7 @@ body{
   color: #61C;
 }
 </style>
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 </head>
 <body>
 <div class="wrapper">
